--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,38 @@
          .hidden {
             display: none;
          }
+
+         ul.navbar {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color: #333;
+            overflow: hidden;
+         }
+
+         ul.navbar li {
+            float: left;
+         }
+
+         ul.navbar li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+         }
+
+         ul.navbar li a:hover {
+            background-color: #ddd;
+            color: black;
+         }
       </style>
    </head>
    <body>
+      <ul class="navbar">
+         <li><a href="#">Entrainement</a></li>
+         <li><a href="/generate">Génération</a></li>
+     </ul>
       <h1>Bienvenue sur la page d'accueil</h1>
       <div id="files"></div>
       <div id="button-wrapper">
@@ -30,7 +59,7 @@
       <br>
       <div id="upload-view" class="hidden">
          <h2>Chargé les fichiers</h1>
-         <input type="file" id="fileInput" /> <!-- accept=".zip" -->
+         <input type="file" id="fileInput" />
          <button id="upload-file-button">Envoyer</button>
          <div id="result"></div>
       </div>
@@ -40,6 +69,13 @@
          <br>
          <button id="start-preprocess-button">Commencer</button>
          <button id="stop-preprocess-button" class="hidden">Annuler</button>
+      </div>
+      <div id="train-view">
+         <h2>Entrainement du modèle</h2>
+         <div id="train-progress"></div>
+         <br>
+         <button id="start-train-button">Commencer à entrainer le modèle</button>
+         <button id="stop-train-button" class="hidden">Arreter l'entrainement</button>
       </div>
       <script src="/static/js/main.js"></script>
    </body>
