--- a/templates/index.html
+++ b/templates/index.html
@@ -75,6 +75,7 @@
          <div id="train-progress"></div>
          <br>
          <button id="start-train-button">Commencer à entrainer le modèle</button>
+         <button id="continu-train-button">Continuer l'entrainer</button>
          <button id="stop-train-button" class="hidden">Arreter l'entrainement</button>
       </div>
       <script src="/static/js/main.js"></script>
